tabela de cadastro

--- a/src/app/components/projects/projects-info/projects-info.html
+++ b/src/app/components/projects/projects-info/projects-info.html
@@ -8,8 +8,8 @@
         </div>
 
         @if (project) {
-        <div class="row g-4">
-            <div class="col-lg-9">
+        <div class="row g-4 gap-5">
+            <div class="col-lg-8">
                 <div class="project-header mb-4">
                     <h1 class="project-title">{{ project.name }}</h1>
                     <div class="meta-info text-muted mb-3">
