--- a/src/app/components/projects/projects-info/projects-info.scss
+++ b/src/app/components/projects/projects-info/projects-info.scss
@@ -49,7 +49,9 @@
     margin: 1rem 0;
   }
 
-  ::ng-deep p:has(> img:only-child) {
+  ::ng-deep p:has(> img:only-child),
+  ::ng-deep h1:has(> img:only-child),
+  ::ng-deep h2:has(> img:only-child) {
     display: flex;
     justify-content: center;
   }
