--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -31,7 +31,7 @@
                   }}</small>
                 }
               </p>
-              <a [routerLink]="['/blog', featuredPost.id]" class="btn btn-success mt-4 align-self-start">Continuar
+              <a [routerLink]="['/post', featuredPost.id]" class="btn btn-success mt-4 align-self-start">Continuar
                 Lendo</a>
             </div>
           </div>
