--- a/src/app/components/posts/posts-info/posts-info.scss
+++ b/src/app/components/posts/posts-info/posts-info.scss
@@ -71,6 +71,7 @@ img {
     width: 100%;
     max-width: 600px;
     border-radius: 15px;
-    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+    margin: 1rem 0;
   }
 }
