--- a/src/app/components/posts/posts-info/posts-info.html
+++ b/src/app/components/posts/posts-info/posts-info.html
@@ -2,9 +2,9 @@
     <div class="container my-5">
         @if (post) {
         <div class="row mx-md-5 mx-1 d-flex align-center">
-            <div class="post-header mb-4">
+            <div class="post-header my-4">
                 <img [src]="post.image_url || 'assets/images/placeholder.png'" alt="{{ post.title }}"
-                    class="text-center img-fluid rounded mb-5 shadow-lg shadow-sm">
+                    class="text-center img-fluid rounded mb-4 shadow-lg shadow-sm">
                 <h1 class="post-title">{{ post.title }}</h1>
                 <div class="meta-info text-muted mb-3">
                     <span>Publicado em: {{ post.publish | date:'dd/MM/yyyy' }}</span>
