--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -23,7 +23,7 @@
 
     <section class="about-section abrace-sectionc">
         <div class="container">
-            <div class="row g-5 align-items-center">
+            <div class="row gy-5 gx-sm-5 align-items-center">
                 <div class="col-lg-6">
                     <img src="assets/images/home/instituto2.jpg" class="img-fluid rounded shadow-lg"
                         alt="Voluntários do Instituto AbraceRS">
@@ -99,7 +99,7 @@
 
     <section class="associate-section abrace-sectionc">
         <div class="container">
-            <div class="row g-5 align-items-center">
+            <div class="row gy-5 gx-sm-5 align-items-center">
 
                 <div class="col-lg-6">
                     <h2 class="abrace-title">Precisamos do seu apoio.</h2>
