--- a/src/app/pages/quem-somos/quem-somos.html
+++ b/src/app/pages/quem-somos/quem-somos.html
@@ -9,7 +9,7 @@
 
   <section class="abrace-sectionw section-origin">
     <div class="container">
-      <div class="row align-items-center g-5">
+      <div class="row align-items-center gy-5 gx-sm-5">
         <div class="col-lg-6">
           <h2 class="abrace-title">A Resposta a uma Catástrofe</h2>
           <p>O <strong>Instituto AbraceRS</strong> foi fundado em maio de 2024 como uma resposta direta à catástrofe das
