--- a/src/app/components/posts/posts-info/posts-info.html
+++ b/src/app/components/posts/posts-info/posts-info.html
@@ -47,9 +47,9 @@
 
 
         } @else if (loading) {
-        <p class="text-center">Carregando projeto...</p>
+        <p class="text-center">Carregando postagem...</p>
         } @else {
-        <div class="alert alert-warning text-center">Projeto não encontrado.</div>
+        <div class="alert alert-warning text-center">Postagem não encontrada.</div>
         }
     </div>
 </div>
